# tax-tracker

./: .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_STAGES.md  Makefile  PROJECT_IMPLEMENTATION_PROMPT.md  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
.github/workflows/: docker-publish.yml
data/: companies.json  sample_bank_statement.csv  sample_statement_alt.csv  transactions.json
routes/: assets.py  auth.py  companies.py  gdrive.py  pdf_converter.py  reports.py  transactions.py
static/: style.css
templates/: assets.html  base.html  calculator.html  companies.html  dashboard.html  pdf_converter.html  register.html  signin.html  transactions.html
utils/: csv_exporter.py  csv_parser.py  gdrive.py  pdf_generator.py  pdf_statement_parser.py  storage.py  tax_calculator.py
